--- a/exercicios/ex022/index06.html
+++ b/exercicios/ex022/index06.html
@@ -7,30 +7,44 @@
     <title></title>
     <style>
         body { 
-            height: 100vh;
+            height: 98vh;
             /*background-color: black; 
             background-image: url('imagens/wallpaper002.jpg');
             background-position: top center;
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;*/
+            position: relative;
             background: black url('imagens/wallpaper002.jpg') top center no-repeat fixed;
             background-size: cover;
         }   
         main {
-            background-color:whitesmoke;
-            max-width: 400px;   
-            padding: 20px;
-            margin: auto;
+            position: absolute;
+            background-color: white;
+            top: 50%;
+            left: 50%;
+            transform:translate(-50%, -50%);
+            max-width: 400px;
+            max-height: 400px;   
+            height: auto;
+            padding: 100px;
+            margin: 40px auto 40px auto;
             border: 1px solid darkblue;
-            border-radius: 15px;
+            border-width: 10px;
+            border-radius: 880px;
+        }
+        main > p {
+            text-align: justify;
+        }
+        main > h1 {
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Testando Fundos</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur, officia harum soluta expedita eligendi facilis impedit qui corporis asperiores recusandae esse molestias pariatur voluptatibus maiores saepe libero molestiae nostrum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore nobis vero veniam, perferendis reprehenderit, quisquam nisi alias, ab cupiditate iste commodi amet in est modi sint eius excepturi aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut sequi magni laboriosam officia hic ipsa saepe fuga pariatur facere. Eaque, neque. Dolore facilis facere aperiam dolores distinctio neque quia?</p>
     </main>
 </body>
 </html>
