--- a/Tentativas/index.html
+++ b/Tentativas/index.html
@@ -21,7 +21,7 @@
             left: 50%;
             height: 125px;  
             width: 125px;
-            box-shadow: 0px 0px 10px whitesmoke;
+            box-shadow: 0px 0px 10px rgba(245, 245, 245, 0.548);
             border-radius: 50%;
             background-image: url('terrapq.png');
             background-repeat: no-repeat;
@@ -43,13 +43,13 @@
      }
     
      section:hover > article > p {
-         color: black;
+         color: rgba(0, 0, 0, 0.63);
          text-align: center;
-         text-shadow: 0px 0px 30px whitesmoke;
-         font-size: 8em;
+         text-shadow: 0px 0px 30px rgba(245, 245, 245, 0.767);
+         font-size: 6em;
          font-family: 'Press Start 2P', cursive;
-         transition-delay: 1s;
-         transition-duration:0,5s;
+         transition-delay: 0.2s;
+         cursor: pointer;
          
      }
 
@@ -58,8 +58,9 @@
          color: transparent;
          margin:auto;
          text-align: center;
-         padding-top: 50px;
+         padding-top: 40px;
          font-weight: bolder;
+         transition-duration: 0,6s;
         }
 
     </style>
