--- a/desafios/Desafio012/cordel.html
+++ b/desafios/Desafio012/cordel.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header id="link-poesias">
         <h1>Cordel Moderno </h1>
-            <p id="link-poesias">Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
+            <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
        
     </header>
 </body>
@@ -54,8 +54,8 @@
             </p>
         </div>
         </section>
-
-        <section>
+        <div id="img02">
+            <section class="branco">
             <p>
                 Pra piorar a liguagem
                 O emoticom é um risco
@@ -66,10 +66,9 @@
                 Decifre esse rabisco.
             </p>
         </section>
-
-        <section id="img02">
+        <section class="transparente">
             <article>
-                <p>
+                <p class="transparente">
                     Tenho saudade das cartas
                     Escritas com a própria mão
                     Mandava no mês de Junho
@@ -80,8 +79,7 @@
                 </p>
             </article>
         </section>
-
-        <section>
+        <section class="branco">
             <p>
                 Agora, escrevo e envio
                 Chegando na mesma hora
@@ -92,8 +90,7 @@
                 Da tecnologia do agora.
             </p>
         </section>
-        
-        <section>
+        <section class="branco">
             <p>
                 Felizmente, pra orar
                 Não precisa de internet
@@ -104,5 +101,6 @@
                 Deixe que Deus interprete.
             </p>
         </section>
+        </div>
     </main>
 </html>
