--- a/Tentativas/hello world/index.html
+++ b/Tentativas/hello world/index.html
@@ -12,7 +12,7 @@
         main {
             position: relative;
             height:100vh;
-            background-image: url('space-1164579_1280.webp');
+            background-image: url('bg-space.webp');
             background-size: cover;
         }
         section {
