--- a/Tentativas/Guerreiros do Amanhã/inventory.html
+++ b/Tentativas/Guerreiros do Amanhã/inventory.html
@@ -33,7 +33,9 @@
                 </ul>
             </div>
         </nav>
-        <div id="inventory-menu" class="container" style="height:100%">
+        <div id="inventory-menu" class="container">
+            <div class="container" height="1000px;">
+            </div>
         </div>    
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
