--- a/Tentativas/Guerreiros do Amanhã/main.html
+++ b/Tentativas/Guerreiros do Amanhã/main.html
@@ -24,7 +24,7 @@
                     <li class="dropdown navbar-item btn btn-group">
                         <a class="btn btn-outline-light dropdown-toggle nav-link" href="" data-toggle="dropdown">Integrantes</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="">Elaria</a>
+                            <a class="dropdown-item" href=""><i class="fa-solid fa-bow-arrow pr-2"></i>Elaria</a>
                             <a class="dropdown-item" href="">Dovahkin</a>
                             <a class="dropdown-item" href="">Rato Imundo</a>
                             <a class="dropdown-item" href="">Tirob</a>
@@ -75,5 +75,6 @@ crossorigin="anonymous"></script>
 crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
 </body>
 </html>
