--- a/Tentativas/Guerreiros do Amanhã/inventory.html
+++ b/Tentativas/Guerreiros do Amanhã/inventory.html
@@ -11,30 +11,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container" style="max-width:100vw">
-        <nav class="guerreiros navbar navbar-expand-sm fixed-top">
-            <div class="container">
-                <a  id="brand" class="navbar-brand text-light" href="main.html"></i>Guerreiros do amanhã</a>
-                <ul class="navbar-nav btn btn-toolbar">
-                    <li class="navbar-item btn btn-group">
-                        <a class="btn btn-outline-light nav-link" href="main.html">Diário de Jornada</a>
-                    </li>
-                    <li class="navbar-item btn btn-group"">
-                        <a class="btn nav-link btn-outline-light" href="inventory.html">Inventário</a>
-                    </li>
-                    <li class="dropdown navbar-item btn btn-group"">
-                        <a class="btn btn-outline-light dropdown-toggle nav-link" href="" data-toggle="dropdown">Integrantes</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="">Elaria</a>
-                            <a class="dropdown-item" href="">Dovahkin</a>
-                            <a class="dropdown-item" href="">Rato Imundo</a>
-                            <a class="dropdown-item" href="">Tirob</a>
-                        </div>
-                    </li>   
-                </ul>
-            </div>
-        </nav>
+    <nav class="guerreiros navbar navbar-expand-sm fixed-top">
+        <div class="container">
+            <a  id="brand" class="navbar-brand text-light" href="main.html"></i>Guerreiros do amanhã</a>
+            <ul class="navbar-nav btn btn-toolbar">
+                <li class="navbar-item btn btn-group">
+                    <a class="btn btn-outline-light nav-link" href="main.html">Diário de Jornada</a>
+                </li>
+                <li class="navbar-item btn btn-group"">
+                    <a class="btn nav-link btn-outline-light active" href="inventory.html">Inventário</a>
+                </li>
+                <li class="dropdown navbar-item btn btn-group">
+                    <a class="btn btn-outline-light dropdown-toggle nav-link" href="" data-toggle="dropdown">Integrantes</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/ellaria-badge.png" alt=""><span class="pl-4"></span> Elaria</a>
+                        <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/dovahkin-badge.png" alt=""><span class="pl-4"></span> Dovahkin</a>
+                        <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/rato-imundo-badge.png" alt=""><span class="pl-4"></span> Rato Imundo</a>
+                        <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/tirob-badge.png" alt=""><span class="pl-4"></span> Tirob</a>
+                    </div>
+                </li>   
+            </ul>
+        </div>
+    </nav>
         <div id="inventory-menu" class="container">
             <div class="container" height="1000px;">
+                <iframe src="" frameborder="0"></iframe>
             </div>
         </div>    
 
