--- a/Tentativas/Guerreiros do Amanhã/main.html
+++ b/Tentativas/Guerreiros do Amanhã/main.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guerreiros do Amanhã</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="shortcut icon" href="assets/badges/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container" style="max-width:100vw">
         <nav class="guerreiros navbar navbar-expand-sm fixed-top">
+            <iframe class="fefe navbar-item" style="border-radius:12px" src="assets/audio/Christopher Tin - Sogno di Volare (The Dream of Flight) (Official Video) feat. Royal Opera Chorus.mp3" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <div class="container">
                 <a  id="brand" class="navbar-brand text-light" href="main.html"></i>Guerreiros do amanhã</a>
                 <ul class="navbar-nav btn btn-toolbar">
                     <li class="navbar-item btn btn-group">
-                        <a class="btn btn-outline-light nav-link" href="main.html">Diário de Jornada</a>
+                        <a class="btn btn-outline-light nav-link active" href="main.html">Diário de Jornada</a>
                     </li>
                     <li class="navbar-item btn btn-group"">
                         <a class="btn nav-link btn-outline-light" href="inventory.html">Inventário</a>
@@ -24,10 +25,10 @@
                     <li class="dropdown navbar-item btn btn-group">
                         <a class="btn btn-outline-light dropdown-toggle nav-link" href="" data-toggle="dropdown">Integrantes</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href=""><i class="fa-solid fa-bow-arrow pr-2"></i>Elaria</a>
-                            <a class="dropdown-item" href="">Dovahkin</a>
-                            <a class="dropdown-item" href="">Rato Imundo</a>
-                            <a class="dropdown-item" href="">Tirob</a>
+                            <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/ellaria-badge.png" alt=""><span class="pl-4"></span> Elaria</a>
+                            <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/dovahkin-badge.png" alt=""><span class="pl-4"></span> Dovahkin</a>
+                            <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/rato-imundo-badge.png" alt=""><span class="pl-4"></span> Rato Imundo</a>
+                            <a class="dropdown-item" href=""><img class="img-badges" src="assets/badges/tirob-badge.png" alt=""><span class="pl-4"></span> Tirob</a>
                         </div>
                     </li>   
                 </ul>
@@ -36,7 +37,7 @@
         <div id="main-menu" class="container">
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img" src="journal-card.webp" alt="">
+                    <img class="card-img" src="assets/img/journal-card.webp" alt="">
                     <div class="card-body text-light">
                         <h4 class="card-title">A história até agora...</h5>
                         <p class="card-text">Saiba mais um pouco sobre a aventura dos Guerreiros do amanhã!</p>
@@ -44,7 +45,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img" style="height:295px;" src="otari.jpg" alt="">
+                    <img class="card-img" style="height:295px;" src="assets/img/otari.jpg" alt="">
                     <div class="card-body text-light">
                         <h4 class="card-title">Lugares visitados</h5>
                         <p class="card-text">Conheça os lugares que nossos heróis conheceram em sua jornada!</p>
@@ -52,7 +53,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img" src="card-image03.webp" alt="">
+                    <img class="card-img" src="assets/img/card-image03.webp" alt="">
                     <div class="card-body text-light">
                         <h4 class="card-title">Pessoas conhecidas</h5>
                         <p class="card-text">Descubra quem são os diversos personagens da aventura!</p>
